--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
 
                     <!-- Login & Register Buttons (Desktop) -->
                     <ul class="flex gap-4 navelements nav-butns">
-                        <li><a href="" class="">Login</a></li>
-                        <li><a href="" class=""><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-8 px-200 rounded-full">
-                            Button
-                          </button></a>
+                        <li><a href="" class="btnss">Login</a></li>
+                        <li><a href="" class="btns">Register</a>
                         </li>
                     </ul>
 
@@ -87,10 +85,10 @@
                         <!-- Main Heading -->
                         <h1 class="">
                             <span class="higilight">Navigate</span> Your Learning <br>
-                            <span class="">Journey!</span>
+                            <span class="e">Journey!</span>
                         </h1>
                         <!-- Main paragraph -->
-                        <p class="mt-40 block self-start">First AI-powered website by SVNU CS <br>
+                        <p class="mt-40 block self-start r">First AI-powered website by SVNU CS <br>
                             students to make studying easier for students at any level!
                         </p>
                         <!-- SELECTION -->
@@ -134,7 +132,7 @@
                             <span class="">Journey!</span>
                         </h1>
                         <!-- Main paragraph -->
-                        <p class="mt-40 block self-start text-center">First AI-powered website by SVNU CS <br>
+                        <p class="mt-40 block self-start text-center r">First AI-powered website by SVNU CS <br>
                             students to make studying easier for students at any level!
                         </p>
                         <!-- SELECTION -->
