--- a/index.html
+++ b/index.html
@@ -363,39 +363,39 @@
 
 
                         <div class="master-courses-element" >
-                            <img width="96" height="96" src="https://img.icons8.com/nolan/96/laravel.png" alt="laravel"/>
+                            <img class="w" width="96" height="96" src="https://img.icons8.com/nolan/96/laravel.png" alt="laravel"/>
                             <h4 class="master-courses-title">Master Laravl</h4>
                             <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
                         </div>
                         
                         <div class="master-courses-element">
-                            <img width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png" alt="react"/>
+                            <img class="w"  width="100" height="100" src="https://img.icons8.com/plasticine/100/react.png" alt="react"/>
                             <h4 class="master-courses-title">Master React</h4>
                             <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
                         </div>
             
                         <div class="master-courses-element">
-                            <img width="96" height="96" src="https://img.icons8.com/color/96/nuxt-jc.png" alt="nuxt-jc"/>
+                            <img class="w"  width="96" height="96" src="https://img.icons8.com/color/96/nuxt-jc.png" alt="nuxt-jc"/>
                             <h4 class="master-courses-title">Master Python</h4>
                             <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
                         </div>
 
                         <div class="master-courses-element">
-                            <img width="96" height="96" src="https://img.icons8.com/nolan/96/sass.png" alt="sass"/>
-                            <h4 class="master-courses-title">Master Python</h4>
-                            <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
-                        </div>
-
-
-                        <div class="master-courses-element">
-                            <img width="96" height="96" src="https://img.icons8.com/fluency/96/node-js.png" alt="node-js"/> 
+                            <img class="w"  width="96" height="96" src="https://img.icons8.com/nolan/96/sass.png" alt="sass"/>
                             <h4 class="master-courses-title">Master Python</h4>
                             <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
                         </div>
 
 
                         <div class="master-courses-element">
-                            <img width="96" height="96" src="https://img.icons8.com/color/96/net-framework.png" alt="net-framework"/>
+                            <img class="w"  width="96" height="96" src="https://img.icons8.com/fluency/96/node-js.png" alt="node-js"/> 
+                            <h4 class="master-courses-title">Master Python</h4>
+                            <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
+                        </div>
+
+
+                        <div class="master-courses-element">
+                            <img class="w"  width="96" height="96" src="https://img.icons8.com/color/96/net-framework.png" alt="net-framework"/>
                             <h4 class="master-courses-title">Master Python</h4>
                             <p class="paragraph-effect master-courses-status">TCS Campus Drive-2023</p>
                         </div>
@@ -529,14 +529,14 @@
             <script>
 const swiperCustom = new Swiper('.swiper-custom', {
     loop: true,  
-    direction: 'vertical', // اتجاه عمودي
+    direction: 'horizontal', // تغيير الاتجاه إلى أفقي
     slidesPerView: 1,
     spaceBetween: 10,
-    mousewheel: true,
+    mousewheel: true, // يمكنك إزالة هذا إذا كنت لا تريد التحكم بالعجلة
     pagination: {
         el: '.swiper-pagination-custom',
         clickable: true,
-        dynamicBullets: true // يجعل النقاط ديناميكية
+        dynamicBullets: true
     }
 });
             </script>
