--- a/index.html
+++ b/index.html
@@ -128,12 +128,15 @@
 
                 <!-- MOBILE-HERO-SECTION -->
                 <section class="MOBILE-HERO-SECTION">
-                    <div class="grid grid-cols-1 justify-items-center">
+                    <div class="grid grid-cols-1 justify-items-center"
+                    data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom"
+                    >
 
 
                         <!-- first element -->
                         <div class="text-center"
-                        data-aos="fade-up"
+                        data-aos="fade-right"
                         data-aos-duration="3000"
                         >
 
@@ -143,9 +146,7 @@
                         <!-- SECOND element -->
                         <div class="text-center">
                             <!-- Main Heading -->
-                            <h1 class="text-center"
-                            data-aos="fade-right"
-                            >
+                            <h1 class="text-center">
                                 <span class="highlight ">Navigate</span> Your Learning <br>
                                 <span class="">Journey!</span>
                             </h1>
@@ -153,8 +154,6 @@
                             <p  class="mt-40 block self-start paragraph-effect" id="main-para"></p>
                             <!-- SELECTION -->
                             <select class="hero-main-selection " name="" id=""
-                            data-aos="fade-left"
-                            data-aos-duration="3000"
                             >
                                 <option value="">Freshman</option>
                                 <option value="">Sophomore</option>
