--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <!-- Desktop nav -->
                     <ul class="flex  gap-4 navelements">
                         <li><a href="" class="links">Home</a></li>
+                        <li><a href="" class="links">Courses</a></li>
                         <li><a href="" class="links">Community</a></li>
                         <li><a href="#About" class="links">About</a></li>
                         <li><a href="" class="links">Contact</a></li>
@@ -60,6 +61,7 @@
                     <div id="mobile-menu">
                         <ul>
                             <li><a href="#" class="mobile-link">Home</a></li>
+                            <li><a href="" class="links">Courses</a></li>
                             <li><a href="#" class="mobile-link">Community</a></li>
                             <li><a href="#About" class="mobile-link">About</a></li>
                             <li><a href="#" class="mobile-link">Contact</a></li>
@@ -408,6 +410,74 @@
 
         <main>
 
+            <section class="Work-with-section text-center">
+                <h2 class="work-with-heading"><span class="highlight ">We Work</span> With More Than 100 Universities And Companies</h2>
+                <div class="flex justify-between flex-wrap work-con">
+                    <img class="work-imgs" src="assets/amazon-da-tagliare-ok-e1566819574998-removebg-preview.png" alt=""
+                    data-aos="fade-right"
+                    >
+                    <img class="work-imgs" src="assets/693b180beb15b2859dcd79a2aa738009-removebg-preview.png" alt=""
+                    data-aos="fade-up">
+                    <img class="d" src="assets/160_Hackerrank_logo_logos-512.webp" alt=""
+                    data-aos="fade-up">
+   
+                    <img class="work-imgs" src="assets/channels4_profile-removebg-preview.png" alt=""
+                    data-aos="fade-left"
+                    >
+                </div>
+
+
+            </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -677,16 +747,18 @@
                             <p class="paragraph-effect our-team-sec">
                                 <div class="grid grid-cols-3 gap-3">
                                    <h5 class="about-names" >FADi 3mad</h5>
+                                   <h5 class="about-names">Marina Hany</h5>
                                    <h5 class="about-names">Marina Monsef</h5>
                                    <h5 class="about-names">Afedokya Ayman</h5>
-                                   <h5 class="about-names">Marina Hany</h5>
-                                   <h5 class="about-names">Mena Mamdouh</h5>
-                                   <h5 class="about-names">Mahmoud Abd El 3azez</h5>
+                                       <h5 class="about-names">Mahmoud Abd El 3azez</h5>
+                                   <h5 class="about-names">Mena Mamdou7</h5>
+                                 
                                    <h5 class="about-names">Kerolos Emil</h5>
                                    <h5 class="about-names">Mohraiel Amir</h5>
                                    <h5 class="about-names">Mariam Shamell</h5>
-                                   <h5 class="about-names">Martena Mekhael</h5>
+                                   <h5 class="about-names">Martina Mekhael</h5>
                                    <h5 class="about-names">Mariam Eshak</h5>
+                               
                                 </div>
 
 
