--- a/courses.html
+++ b/courses.html
@@ -76,12 +76,14 @@
         <main>
             <div class="container">
                 <aside class="sidebar">
+                    <div class="s">
                     <ul class="menu">
                         <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/20/external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2.png" alt="external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2"/><a href="" >Courses</a></li>
                         <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-bearicons-blue-bearicons/20/external-To-Do-List-reminder-and-to-do-bearicons-blue-bearicons.png" alt="external-To-Do-List-reminder-and-to-do-bearicons-blue-bearicons"/><a href=""   id="to-do">To-Do List</a></li>
                         <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/arcade/20/test.png" alt="test"/><a href=""> Tests</a></li>
                         <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-flaticons-flat-flat-icons/20/external-problem-solving-creativity-flaticons-flat-flat-icons.png" alt="external-problem-solving-creativity-flaticons-flat-flat-icons"/><a href=""> Problem Solving</a></li>
                     </ul>
+                    </div>
                     <p class="logout"><img width="20" height="20" src="https://img.icons8.com/ultraviolet/20/exit.png" alt="exit"/><a href="">Logout</a></p>
                 </aside>
         
@@ -124,7 +126,7 @@
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/ds.png" alt="Parallel Program"> 
-                        <h4>Parallel Program</h4>
+                        <h4>Parallel </h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Hamam</p>
                     </div>
@@ -134,18 +136,7 @@
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Sara</p>
                     </div>
-                    <div class="course-card"> 
-                        <img width="96" height="96" src="assets/mo.png" alt="Model&Simulat"> 
-                        <h4>Model&Simulat</h4>
-                        <p class="paragraph-effect subtitle">Drive-2024</p>
-                        <p class="paragraph-effect small-p">With Dr. Sara</p>
-                    </div>
-                    <div class="course-card"> 
-                        <img width="96" height="96" src="assets/mo.png" alt="Model&Simulat"> 
-                        <h4>Model&Simulat</h4>
-                        <p class="paragraph-effect subtitle">Drive-2024</p>
-                        <p class="paragraph-effect small-p">With Dr. Sara</p>
-                    </div>
+
 
                 </section>
             </div>
