--- a/axon-chat.html
+++ b/axon-chat.html
@@ -3,53 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- TAIILWIND && CSS -->
+    <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="styles/components.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!--SWIPER LIBRARY  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- AOS ANIMATION LIBRARY -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- TITLE && ICON-->
+    <title>Home</title>
+    <link rel="icon" type="ico" href="assets/Card elements04.png">
 </head>
 <body>
-    <header>
-        <!-- NAVBAR SECTION -->
-        <section class="NAVBR-SECTION" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-            <!-- NAVBAR -->
-            <nav class="flex justify-between items-center navbar">
 
-                <!-- Logo -->
-                <a href="index.html"><img class="w-24" src="assets/Card elements04.png" alt="Logo"></a>
 
-                <!-- Desktop nav -->
-                <ul class="flex  gap-4 navelements">
-                    <li><a href="" class="links" >Home</a></li>
-                    <li><a href="" class="links">Courses</a></li>
-                    <li><a href="" class="links">Community</a></li>
-                    <li><a href="#About" class="links">About</a></li>
-                    <li><a href="" class="links">Contact</a></li>
-                </ul>
     
-                <ul class="flex gap-4 navelements nav-butns">
-                    <li><a href="" class="btn-outline">Login</a></li>
-                    <li><a href="" class="btn-primary">Register</a></li>
-                </ul>
-
-                <!-- Mobile nav -->
-                <button id="menu-btn" class="text-white text-4xl">☰</button>
-
-                <div id="mobile-menu">
-                    <ul>
-                        <li><a href="#" class="mobile-link">Home</a></li>
-                        <li><a href="" class="links">Courses</a></li>
-                        <li><a href="#" class="mobile-link">Community</a></li>
-                        <li><a href="#About" class="mobile-link">About</a></li>
-                        <li><a href="#" class="mobile-link">Contact</a></li>
-                        <li><a href="#" class="mobile-link">Login</a></li>
-                        <li><a href="#" class="mobile-link">Register</a></li>
-                    </ul>  
-                </div>
-            </nav>
-        </section>
-
-    </header>
 
 
 
 
+
+
+
+
+
+
+
+    
 </body>
 </html>
