--- a/courses.html
+++ b/courses.html
@@ -93,7 +93,7 @@
               
                 <section class="courses-grid" id="courses-grid">
                     <div class="courses-heading">
-                        <h3>Sophomore Courses</h3>
+                        <h3 class="">Sophomore Courses</h3>
                         <div class="courses-subheading">
                             <img width="20" height="20" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/20/external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2.png" alt="external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2"/>
                             <p class="paragraph-effect">Here is your courses</p>
@@ -102,37 +102,37 @@
         
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/datastruct.png" alt="Data Structure"> 
-                        <h4>Data Structure</h4>
+                        <h4 class="dashboard-courses-title">Data Structure</h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Nahla</p>
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/distributed-dbms.svg" alt="Database"> 
-                        <h4>Database</h4>
+                        <h4 class="dashboard-courses-title">Database</h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Emad</p>
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/web.png" alt="Web"> 
-                        <h4>Web</h4>
+                        <h4 class="dashboard-courses-title">Web</h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Amal</p>
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/ph.png" alt="Physics"> 
-                        <h4>Physics</h4>
+                        <h4 class="dashboard-courses-title">Physics</h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Badry</p>
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/ds.png" alt="Parallel Program"> 
-                        <h4>Parallel </h4>
+                        <h4 class="dashboard-courses-title">Parallel </h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Hamam</p>
                     </div>
                     <div class="course-card"> 
                         <img width="96" height="96" src="assets/mo.png" alt="Model&Simulat"> 
-                        <h4>Model&Simulat</h4>
+                        <h4 class="dashboard-courses-title">Model&Simulat</h4>
                         <p class="paragraph-effect subtitle">Drive-2024</p>
                         <p class="paragraph-effect small-p">With Dr. Sara</p>
                     </div>
