--- a/courses.html
+++ b/courses.html
@@ -30,7 +30,7 @@
                     <ul class=" navelements desktopnav">
                         <li><a href="index.html" class="links" >Home</a></li>
                         <li><a href="courses.html" class="links">Courses</a></li>
-                        <li><a href="" class="links">Community</a></li>
+                        <li><a href="community.html" class="links">Community</a></li>
                     </ul>
 
                     <ul class="navelements nav-butns desktopnav">
@@ -43,8 +43,7 @@
                     <div id="mobile-menu">
                         <ul>
                             <li><a href="index.html" class="mobile-link">Home</a></li>
-                            <li><a href="" class="links">Courses</a></li>
-                            <li><a href="#" class="mobile-link">Community</a></li>
+                            <li><a href="community.html" class="mobile-link">Community</a></li>
                             <li><a href="#" class="mobile-link">logout</a></li>
                         </ul>  
                     </div>
@@ -64,8 +63,7 @@
                         <ul class="menu">
                             <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/20/external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2.png" alt="external-courses-recruitment-agency-flaticons-lineal-color-flat-icons-2"/><a href="" >Courses</a></li>
                             <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-bearicons-blue-bearicons/20/external-To-Do-List-reminder-and-to-do-bearicons-blue-bearicons.png" alt="external-To-Do-List-reminder-and-to-do-bearicons-blue-bearicons"/><a href=""   id="to-do">To-Do List</a></li>
-                            <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/arcade/20/test.png" alt="test"/><a href=""> Tests</a></li>
-                            <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-flaticons-flat-flat-icons/20/external-problem-solving-creativity-flaticons-flat-flat-icons.png" alt="external-problem-solving-creativity-flaticons-flat-flat-icons"/><a href=""> Problem Solving</a></li>
+                            <li class="menu-item"><img width="20" height="20" src="https://img.icons8.com/external-flaticons-flat-flat-icons/20/external-problem-solving-creativity-flaticons-flat-flat-icons.png" alt="external-problem-solving-creativity-flaticons-flat-flat-icons"/><a href="ps.html"> Problem Solving</a></li>
                         </ul>
                     </div>
                     <p class="logout"><img width="20" height="20" src="https://img.icons8.com/ultraviolet/20/exit.png" alt="exit"/><a href="index.html">Logout</a></p>
