--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class=" navelements desktopnav">
                         <li><a href="index.html" class="links" >Home</a></li>
                         <li><a href="courses.html" class="links">Courses</a></li>
-                        <li><a href="" class="links">Community</a></li>
+                        <li><a href="community.html" class="links">Community</a></li>
                         <li><a href="#Axon" class="links">Axon</a></li>
                         <li><a href="#About" class="links">About</a></li>
                         <li><a href="contact.html" class="links">Contact</a></li>
@@ -60,9 +60,9 @@
                         <ul>
                             <li><a href="index.html" class="mobile-link">Home</a></li>
                             <li><a href="courses.html" class="links">Courses</a></li>
-                            <li><a href="#" class="mobile-link">Community</a></li>
+                            <li><a href="community.html" class="mobile-link">Community</a></li>
                             <li><a href="#About" class="mobile-link">About</a></li>
-                            <li><a href="#" class="mobile-link">Contact</a></li>
+                            <li><a href="contact.html" class="mobile-link">Contact</a></li>
                             <li><a href="Auth.html" class="mobile-link" id="login-mobile-btn">Login</a></li>
                             <li><a href="Auth.html" class="mobile-link" id="Sign-mobile-btn">Register</a></li>
                         </ul>  
@@ -469,7 +469,7 @@
                         robootreplay.classList.add('robot-msg','paragraph-effect');
                         chatMessages.appendChild(robootreplay);
             
-                        const replyText = "HI  DR X WE WANT FULL  MARK  PLEASE.. ❤️";
+                        const replyText = "HI  DR  WE WANT FULL  MARK  PLEASE.. ❤️";
                         let index = 0;
             
                         const typingEffect = setInterval(() => {
