--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <ul class=" navelements desktopnav">
                         <li><a href="index.html" class="links" >Home</a></li>
                         <li><a href="courses.html" class="links">Courses</a></li>
-                        <li><a href="" class="links">Community</a></li>
+                        <li><a href="community.html" class="links">Community</a></li>
                     </ul>
 
                     <ul class="navelements nav-butns desktopnav">
@@ -45,9 +45,9 @@
                     <div id="mobile-menu">
                         <ul>
                             <li><a href="index.html" class="mobile-link">Home</a></li>
-                            <li><a href="" class="links">Courses</a></li>
-                            <li><a href="#" class="mobile-link">Community</a></li>
-                            <li><a href="#" class="mobile-link">logout</a></li>
+                            <li><a href="courses.html" class="links">Courses</a></li>
+                            <li><a href="community.html" class="mobile-link">Community</a></li>
+                            <li><a href="index.html" class="mobile-link">logout</a></li>
                         </ul>  
                     </div>
                 </nav>
